--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tw-elements": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
