--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "framer-motion": "^10.17.0",
     "next": "14.0.1",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-select": "^5.8.0",
     "tw-elements": "^1.1.0"
   },
   "devDependencies": {
