--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
+    "axios": "^1.6.5",
     "framer-motion": "^10.17.0",
     "next": "14.0.1",
     "punycode": "^2.3.1",
