--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "redux": "^5.0.1",
     "tw-elements": "^1.1.0"
   },
   "devDependencies": {
