--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "recoil": "^0.7.7",
     "redux": "^5.0.1",
     "tw-elements": "^1.1.0"
   },
