--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "axios": "1.6.5",
     "framer-motion": "^10.17.0",
     "next": "14.0.1",
-    "punycode": "2.3.1",
+    "punycode": "^2.3.1",
     "react": "18",
     "react-awesome-button": "7.0.5",
     "react-dom": "18",
-    "react-icons": "4.12.0",
+    "react-icons": "^4.12.0",
     "react-redux": "9.1.0",
     "react-select": "5.8.0",
-    "recoil": "0.7.7",
+    "recoil": "^0.7.7",
     "redux": "5.0.1",
     "tw-elements": "1.1.0"
   },
