--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"@nextui-org/system": "2.0.15",
 		"@nextui-org/theme": "2.1.17",
 		"axios": "1.6.5",
-		"framer-motion": "^10.17.0",
+		"clsx": "^2.1.0",
+		"framer-motion": "^10.18.0",
 		"next": "14.0.1",
 		"punycode": "^2.3.1",
 		"react": "18",
@@ -26,13 +27,17 @@
 		"react-select": "5.8.0",
 		"recoil": "^0.7.7",
 		"redux": "5.0.1",
+		"tailwind-merge": "^2.2.2",
 		"tw-elements": "1.1.0"
 	},
 	"devDependencies": {
+		"@types/node": "^20.11.30",
+		"@types/react": "^18.2.67",
 		"autoprefixer": "10.4.16",
 		"eslint": "8",
 		"eslint-config-next": "14.0.1",
 		"postcss": "8.4.31",
-		"tailwindcss": "3.3.5"
+		"tailwindcss": "3.3.5",
+		"typescript": "^5.4.3"
 	}
 }
