--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@nextui-org/react": "2.2.9",
 		"@nextui-org/system": "2.0.15",
 		"@nextui-org/theme": "2.1.17",
+		"@reduxjs/toolkit": "^2.2.2",
 		"axios": "1.6.5",
 		"clsx": "^2.1.0",
 		"framer-motion": "^10.18.0",
