--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@blueprintjs/popover2": "^2.1.3",
+		"@blueprintjs/table": "^5.1.3",
 		"@material-tailwind/react": "2.1.8",
 		"@nextui-org/button": "2.0.26",
 		"@nextui-org/react": "2.2.9",
@@ -19,6 +21,7 @@
 		"clsx": "^2.1.0",
 		"framer-motion": "^10.18.0",
 		"next": "14.0.1",
+		"prettier": "^3.2.5",
 		"punycode": "^2.3.1",
 		"react": "18",
 		"react-awesome-button": "7.0.5",
