--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@blueprintjs/popover2": "^2.1.3",
-		"@blueprintjs/table": "^5.1.3",
 		"@material-tailwind/react": "2.1.8",
-		"@nextui-org/button": "2.0.26",
-		"@nextui-org/react": "2.2.9",
+		"@nextui-org/button": "^2.0.31",
+		"@nextui-org/date-picker": "^2.0.7",
+		"@nextui-org/react": "^2.3.6",
 		"@nextui-org/system": "2.0.15",
 		"@nextui-org/theme": "2.1.17",
 		"@reduxjs/toolkit": "^2.2.2",
@@ -41,7 +40,7 @@
 		"eslint": "8",
 		"eslint-config-next": "14.0.1",
 		"postcss": "8.4.31",
-		"tailwindcss": "3.3.5",
+		"tailwindcss": "^3.4.0",
 		"typescript": "^5.4.3"
 	}
 }
